[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.75"
checked = "0.5.0"
itertools = "0.12.0"
md5 = "0.7.0"
nonempty-collections = "0.1.4"
num = "0.4.1"
regex = "1.10.2"
tap = "1.0.1"
thiserror = "1.0.50"
winnow = "0.5.25"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "2023_1"
harness = false

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1

[profile.release]
lto = true
codegen-units = 1
strip = true
