[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
publish = false

[lints.clippy]
pedantic = "warn"

[dependencies]
anyhow = "1.0.75"
checked = "0.5.0"
getset = "0.1.2"
image = "0.24.7"
itertools = "0.12.0"
md5 = "0.7.0"
nalgebra = "0.32.3"
nonempty-collections = "0.1.4"
num = "0.4.1"
regex = "1.10.2"
tap = "1.0.1"
thiserror = "1.0.50"
winnow = "0.5.25"

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1

[profile.release]
lto = true
codegen-units = 1
strip = true
